--- a/MagicSearch/res/values/strings.xml
+++ b/MagicSearch/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="main_button_webscraping">Collect data</string>
     <string name="main_edit_hint">Cardname</string>
     <string name="no_search_result">There were no cards found.</string>
+    <string name="webscraping_success">MagicSearch: Error while downloading</string>
+    <string name="webscraping_failure">MagicSearch: Download successfully finished</string>
     
     
 
